--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -21,11 +21,11 @@ html {
   --font-family-paragraf: "Roboto", sans-serif;
   --font-family-title: "Merriweather", serif;
   --font-weight-bold: 900;
+  --button-transition: transform .2s ease-in-out;
 }
 
 .html--dark {
   --color-n40: #F97E77;
-  --color-n13: linear-gradient(180deg, #0D0D0D 22%, #F9F9F9 300%);
   --color-n10: #0D0D0D;
   --color-n15: #000;
   --color-n20: #FFF;
@@ -106,24 +106,24 @@ body {
   border-radius: 4px;
   font-weight: var(--font-weight-bold);
   padding: 15px 24px;
-  transition: transform .2s ease-in-out;
+  transition: var(--button-transition);
 }
 
 .button--primary:hover {
   transform: scale(1.2);
-  transition: transform .2s ease-in-out;
+  transition: var(--button-transition);
 }
 
 .button--secondary {
   margin-right: 30px;
   background-color: var(--color-n10);
   color: var(--color5);
-  transition: transform .2s ease-in-out;
+  transition: var(--button-transition);
 }
 
 .button--secondary:hover {
   transform: scale(1.2);
-  transition: transform .2s ease-in-out;
+  transition: var(--button-transition);
 }
 
 .p__line-height {
@@ -205,7 +205,7 @@ body {
   align-items: center;
   justify-content: flex-end;
   padding-right: 40px;
-  transition: transform .2s ease-in-out;
+  transition: var(--button-transition);
 }
 
 .button__back-to-top--active {
@@ -292,8 +292,7 @@ body {
 
 .archmove__title--h2 {
   display: flex;
-  width: 40%;
-  justify-content: flex-end;
+  padding-left: 140px;
   font-size: var(--font-size-title);
   font-family: var(--font-family-title);
   line-height: 1.25;
@@ -313,6 +312,7 @@ body {
   display: flex;
   justify-content: space-around;
   padding-left: 80px;
+  padding-right: 40px;
 }
 
 .archmove__content {
@@ -351,6 +351,10 @@ body {
 .dream-project {
   width: 100%;
   background: var(--color-n13);
+}
+
+.html--dark .dream-project {
+  background-image: linear-gradient(180deg, #0D0D0D 22%, #F9F9F9 300%);
 }
 
 .dream-project__container {
@@ -446,10 +450,6 @@ body {
 
   .archmove__container {
     display: block;
-  }
-
-  .archmove__title {
-    width: 70%;
   }
 
   .dream-project__content {
