--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -210,10 +210,8 @@ body {
 .button__back-to-top--active {
   position: fixed;
   display: block;
-  right: 5%;
+  right: 1%;
   bottom: 10%;
-  width: 50px;
-  height: 20px;
   cursor: pointer;
   border: none;
   background: none;
@@ -221,6 +219,10 @@ body {
 
 .button__back-to-top--hidden {
   display: none;
+}
+
+.back-to-top__icon {
+  fill: var(--color-r40);
 }
 
 .theme-toggle {
