--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -528,6 +528,10 @@ body {
     font-size: var(--font-size-title);
   }
 
+  .design__photo-container {
+    margin-top: 20px;
+  }
+
   .archmove__title--h2 {
     font-size: var(--font-size-title);
     padding-right: 50px;
