first loop-vertical in game flow logic done

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-state/game-state.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-state/game-state.component.html
@@ -9,7 +9,7 @@
       <span class="game-state__player-name game-state__player-name--first-player">Player 1</span>
     </div>
     <div class="game-state__player-score game-state__player-score--first-player">
-      <span class="player-score__value player-score__value--first-player" data-player1-score="0">0</span>
+      <span class="player-score__value player-score__value--first-player" data-player1-score="0">{{scorePl1}}</span>
     </div>
   </div>
   <div class="game-state__player-container">
@@ -22,7 +22,7 @@
       <span class="game-state__player-name game-state__player-name--second-player">Player 2</span>
     </div>
     <div class="game-state__player-score game-state__player-score--second-player">
-      <span class="player-score__value player-score__value--second-player" data-player2-score="0">0</span>
+      <span class="player-score__value player-score__value--second-player" data-player2-score="0">{{scorePl2}}</span>
     </div>
   </div>
 </div>
