--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/app.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/app.component.html
@@ -10,7 +10,7 @@
 </header>
 <div class="app-container">
   <div class="app-container__first-column">
-    <app-game-state  [state]="state"></app-game-state>
+    <app-game-state  [scorePl1]="scorePl1" [scorePl2]="scorePl2"></app-game-state>
     <app-game-dashboard (resetCurGame)="resetCurGame()"></app-game-dashboard>
   </div>
     <app-game-field [state]="state" (stateCheck) = stateCheck($event)></app-game-field>
