add field and square component

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/field.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/field.component.css
@@ -8,6 +8,9 @@
 }
 
 .field__square {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100px;
   height: 100px;
   background-color: #C4C4C4;
